<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/colorSurface"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TaskView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/topbarmenu"
                app:navigationIcon="@drawable/round_menu_24"
                app:subtitle=""
                app:title="Home" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="?attr/colorPrimaryContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tool">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:fontFamily="@font/candal"
                        android:text="Your today's task"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/candal"
                        android:text="almost Done!!"
                        android:textSize="18sp"

                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        tools:ignore="HardcodedText" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:elevation="30dp"
                        android:fontFamily="@font/candal"
                        android:text="@string/view_task"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/circularProgressIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:longClickable="false"
                        android:max="100"
                        android:outlineProvider="bounds"
                        android:pointerIcon="cell"
                        android:progress="80"
                        app:indicatorDirectionCircular="counterclockwise"
                        app:indicatorSize="90dp"
                        app:layout_constraintBottom_toBottomOf="@+id/button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/button"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:trackCornerRadius="100dp"
                        app:trackThickness="8dp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:cardBackgroundColor="?attr/colorPrimaryContainer"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:importantForAccessibility="no"
                            android:scaleType="centerCrop"
                            android:src="@drawable/baseline_more_horiz_24" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/candal"
                        android:text="@string/_80"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
                        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/progress_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/candal"
                        android:text="@string/inProgress"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="PrivateResource" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        app:cardBackgroundColor="?attr/colorTertiaryContainer"
                        app:cardCornerRadius="100dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="@+id/textView4">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/task_progress_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_mono"
                                android:maxLength="2"
                                android:maxLines="1"
                                android:text="4"
                                android:textColor="?attr/colorOnTertiaryContainer"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="HardcodedText" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView3"
                        tools:itemCount="10"
                        tools:listitem="@layout/in_progress_view" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/candal"
                        android:text="@string/task_groups"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="PrivateResource" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        app:cardBackgroundColor="?attr/colorTertiaryContainer"
                        app:cardCornerRadius="100dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView5"
                        app:layout_constraintStart_toEndOf="@+id/textView5"
                        app:layout_constraintTop_toTopOf="@+id/textView5">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/group_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_mono"
                                android:maxLength="2"
                                android:maxLines="1"
                                android:text="4"
                                android:textColor="?attr/colorOnTertiaryContainer"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="HardcodedText" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView4"
                        tools:itemCount="4"
                        tools:listitem="@layout/task_group_layout" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>